@@ -1,4 +1,6 @@
 3.0.11
+ * Provide user workaround when system_schema.columns does not contain entries
+   for a table that's in system_schema.tables (CASSANDRA-13180)
  * Dump threads when unit tests time out (CASSANDRA-13117)
  * Better error when modifying function permissions without explicit keyspace (CASSANDRA-12925)
  * Indexer is not correctly invoked when building indexes over sstables (CASSANDRA-13075)
